# usb22-arcnet-winusb-driver

./: .gitignore  01-init-register.pcapng  02-transmit.pcapng  03-receive.pcapng  04-our-init.pcapng  05-our-init2.pcapng  06-our-transmit.pcapng  CMakeLists.txt  README.md  build.bat
driver/: INSTALL.md  install.bat  sign.ps1  usb22_winusb.inf
gui/: App.xaml  App.xaml.cs  ArcnetInterop.cs  MainWindow.xaml  MainWindow.xaml.cs  WetrechArcnetManager.csproj  app.manifest
interop_test/: InteropTest.csproj  Program.cs
reference/: usb22-protocol-notes.md
src/: arcnet.c  arcnet.h  arcnet_io.c  main.c  test_ack.c  test_arcnet.c  test_b4survey.c  test_bigframe.c  test_chipreset.c  test_closequiet.c  test_common.h  test_lifecycle.c  test_listen.c  test_multi.c  test_multi_recovery.c  test_recovery.c  test_rstlight.c  test_threads.c  test_txevent.c  test_txloop.c  winusb_probe.c
